--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,7 @@ environment:
 
 dependencies:
   shared_preferences: ^0.5.8
-  hasura_cache_interceptor: #">=1.0.0 <2.0.0"
-    git: https://github.com/Flutterando/hasura_cache_interceptor
+  hasura_cache_interceptor: ">=1.0.0-dev.3 <2.0.0"
   flutter:
     sdk: flutter
 
