--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,21 +1,22 @@
 name: shared_preferences_cache_interceptor
 description: Package to implements cache using shared preferences to hasura_connect package
-version: 1.0.0-dev.3
+version: 1.0.0-dev.4
 homepage: https://flutterando.com.br
 repository: https://github.com/Flutterando/shared_preferences_cache_interceptor
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0-0 <3.0.0"
+  flutter: ">=1.17.0 <3.0.0"
 
 dependencies:
-  shared_preferences: ^0.5.8
-  hasura_cache_interceptor: ">=1.0.0-dev.3 <2.0.0"
+  shared_preferences: ">=2.0.0 <3.0.0"
+  hasura_cache_interceptor: ">=1.0.0-dev.5 <2.0.0"
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  mockito: ^4.1.1
+  mocktail: ^0.0.1-dev.12
+  # mockito: ^4.1.1
   flutter_test:
     sdk: flutter
 
