--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,20 @@ environment:
 dependencies:
   shared_preferences: ">=2.0.0 <3.0.0"
   hasura_cache_interceptor: ">=1.0.0-dev.5 <2.0.0"
+  # hasura_cache_interceptor: 
+  #   git: https://github.com/OrlandoEduardo101/hasura_cache_interceptor.git
+      # resolved-ref: 9767f5f52a4549dd6278790da90841d7e550d43b
   flutter:
     sdk: flutter
+  
+dependency_overrides:
+  platform: ^3.1.0
+  # hasura_connect: ^4.0.0+2
+  hasura_cache_interceptor: 
+    git: https://github.com/OrlandoEduardo101/hasura_cache_interceptor.git
 
 dev_dependencies:
-  mocktail: ^0.0.1-dev.12
+  mocktail: ^0.3.0 
   # mockito: ^4.1.1
   flutter_test:
     sdk: flutter
